Fixes #42:toggle password visibility

--- a/src/pages/Signin.scss
+++ b/src/pages/Signin.scss
@@ -26,6 +26,11 @@
       border-bottom: 2px solid #5f6f52;
     }
   }
+  .wrapper {
+    display: flex;
+    align-items: center;
+  }
+
   .errorMessage {
     padding: 0;
     margin: 0;
